--- a/html_01/indexuva.html
+++ b/html_01/indexuva.html
@@ -3,17 +3,28 @@
   <head>
 	  <meta charset="UTF-8">
 	  <title>Mi Primer HTML</title>
+
+    <link rel="stylesheet" href="assets/style/style.css">
+
   </head>
 
   <body>
+  <section id="news">
 
-    <h1>Hola marte</h1>
-    <br>
-    <br>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <b>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</b> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <h1>Hola HTML</h1>
+      <br>
+      <br>
+      <div id="banner">
+        <img src="assets/img/atom-stable-beta-development.png" >
+      </div>
 
-    <img src="atom-stable-beta-development.png" style="width:304px;height:100%">
-    <br><br>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <b>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</b> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+
+      <br>
+      <br>
+    </section>
+
     <div>
       <a href="http://www.w3schools.com/html/html5_intro.asp">Ver ejercicio</>
     </div>
