--- a/indexuva.html
+++ b/indexuva.html
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+
+    <table border="l" style="width100%">
+      <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+        <td>50</td>
+      </tr>
+      <td>Eve</td>
+      <td>Jackson</td>
+      <td>94</td>
+    </tr>
+  </table>
+    
+
   <section id="news">
 
       <h1>Hola HTML</h1>
